<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTintMode="add">

    <Button
        android:id="@+id/login2"
        android:layout_width="226dp"
        android:layout_height="74dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="372dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        style="@style/name_email_password"
        android:layout_width="261dp"
        android:layout_height="84dp"
        android:layout_marginTop="136dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="365dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:hint="@string/emai"
        android:inputType="textWebEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="336dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/password_case_sensitive"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="53dp"
        android:layout_marginStart="348dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>